@@ -183,7 +183,7 @@ As defined by the Language Server Protocol 3.16."
      lsp-hack lsp-haskell lsp-haxe lsp-idris lsp-java lsp-javascript lsp-jq
      lsp-json lsp-kotlin lsp-kubernetes-helm lsp-latex lsp-lisp lsp-ltex
      lsp-ltex-plus lsp-lua lsp-fennel lsp-magik lsp-markdown lsp-marksman
-     lsp-mdx lsp-meson lsp-metals lsp-mint lsp-mojo lsp-move lsp-mssql
+     lsp-matlab lsp-mdx lsp-meson lsp-metals lsp-mint lsp-mojo lsp-move lsp-mssql
      lsp-nextflow lsp-nginx lsp-nim lsp-nix lsp-nushell lsp-ocaml lsp-openscad
      lsp-pascal lsp-perl lsp-perlnavigator lsp-php lsp-pls lsp-purescript
      lsp-pwsh lsp-pyls lsp-pylsp lsp-pyright lsp-python-ms lsp-qml lsp-r
@@ -985,7 +985,8 @@ Changes take effect only when a new session is started."
     (nushell-mode . "nushell")
     (nushell-ts-mode . "nushell")
     (meson-mode . "meson")
-    (yang-mode . "yang"))
+    (yang-mode . "yang")
+    (matlab-mode . "matlab"))
   "Language id configuration.")
 
 (defvar lsp--last-active-workspaces nil
